Fix #16: Chevrons should be aligned to the right

--- a/public/theme/theme-base/_mixins.scss
+++ b/public/theme/theme-base/_mixins.scss
@@ -90,8 +90,7 @@
     
     .p-submenu-icon {
         color: $horizontalMenuRootMenuitemIconColor;
-        margin-left: $inlineSpacing;
-    }
+     }
 
 	&:not(.p-disabled):hover {
 		background: $horizontalMenuRootMenuitemHoverBg;
