--- a/public/theme/theme-dim/lightgreen/theme.css
+++ b/public/theme/theme-dim/lightgreen/theme.css
@@ -4744,7 +4744,6 @@
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link .p-submenu-icon {
   color: rgba(255, 255, 255, 0.6);
-  margin-left: 0.5rem;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover {
   background: rgba(255, 255, 255, 0.03);
@@ -5065,7 +5064,6 @@
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link .p-submenu-icon {
   color: rgba(255, 255, 255, 0.6);
-  margin-left: 0.5rem;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover {
   background: rgba(255, 255, 255, 0.03);
