--- a/public/theme/theme-light/green/theme.css
+++ b/public/theme/theme-light/green/theme.css
@@ -4744,7 +4744,6 @@
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link .p-submenu-icon {
   color: #6c757d;
-  margin-left: 0.5rem;
 }
 .p-megamenu .p-megamenu-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover {
   background: #e9ecef;
@@ -5065,7 +5064,6 @@
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link .p-submenu-icon {
   color: #6c757d;
-  margin-left: 0.5rem;
 }
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:not(.p-disabled):hover {
   background: #e9ecef;
